# EXPAT

./: CMakeLists.txt
cmake/: EXPATConfig.cmake.in  expat.pc.cmakein
